Fixes layout issues and removes excess styles

--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -1,35 +1,42 @@
-.face-card {
-    width: 300px;
-    margin: 50px;
+body {
+    background-color: black;
+    background-image: url("../images/banner.jpg");
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: contain;
 }
 
-.container {
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-container {
+    margin-top: 70px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.center-text {
-    text-align: center;
+.face-card {
+    width: 300px;
+    margin: 50px;
 }
 
-.page-footer-content {
-    justify-content: center;
-    align-items: center;
+.splash {
+    margin-top: 110px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    white-space: nowrap;
+    color: white;
+    text-shadow: 2px 2px 1px rgba(75, 75, 75, 0.5);
 }
 
-.container {
-	margin-top: 300px;
+.splash-group-margin {
+    margin-bottom: -20px;
 }
 
-body {
-	max-width: 1200px;
-	background: black url("../images/banner.jpg") no-repeat center top;
-}
-
-.css-title {
-	position: relative;
-	width: 50%;
-	left: 20%;
-	top: 120px;
+.with-border {
+    border: 5px solid red;
 }
